Formatação de arquivos e separação de classes para o css

--- a/src/main/resources/static/css/style.tailwind.css
+++ b/src/main/resources/static/css/style.tailwind.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-.form-input {
-    @apply py-2 px-3 font-medium shadow-inner rounded-md w-full leading-tight outline-2 focus:outline;
+.input {
+    @apply py-2 px-3 rounded-md shadow focus:shadow-md font-medium outline-1 focus:outline bg-slate-100 text-slate-700 outline-blue-500;
+}
+
+.label {
+    @apply font-medium text-slate-600;
+}
+
+.link {
+    @apply text-blue-400 hover:text-blue-500 hover:underline;
 }
