--- a/src/main/resources/templates/indexPaciente.html
+++ b/src/main/resources/templates/indexPaciente.html
@@ -3,7 +3,7 @@
     <head th:replace="~{fragments :: mainHeader('Dashboard')}"></head>
 
     <body class="bg-sky-100">
-    <header th:replace="~{fragments :: header('Agendamento')}"></header>
+        <header th:replace="~{fragments :: header}"></header>
 
         <div class="mx-20">
             <a
