--- a/src/main/resources/templates/agendamento.html
+++ b/src/main/resources/templates/agendamento.html
@@ -1,115 +1,192 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt_BR">
+    <head th:replace="~{fragments :: mainHeader('Agendamento')}"></head>
 
-<head th:replace="~{fragments :: mainHeader('Agendamento')}"></head>
+    <body class="bg-sky-100">
+        <header th:replace="~{fragments :: header}"></header>
+        <div class="flex flex-col my-4 items-center">
+            <form
+                class="border rounded max-w-lg w-full flex flex-col px-8 pt-3 pb-5 bg-white shadow-md"
+                action="/agendamento"
+                enctype="utf8"
+                method="POST"
+                th:object="${agendamentoDTO}"
+            >
+                <h1 class="font-bold text-3xl text-center mt-3 text-gray-800">
+                    Cadastrar Atendimento
+                </h1>
 
-<body class="bg-sky-100">
-<header th:replace="~{fragments :: header('Agendamento')}"></header>
-    <div class="flex flex-col my-4 items-center">
-        <form class="border rounded max-w-lg w-full flex flex-col px-8 pt-3 pb-5 bg-white shadow-md"
-            action="/agendamento" enctype="utf8" method="POST" th:object="${agendamentoDTO}">
-            <h1 class="font-bold text-3xl text-center mt-3 text-gray-800">Cadastrar Atendimento</h1>
+                <label class="label" for="tipoAgendamento">
+                    Tipo de Agendamento
+                </label>
+                <select
+                    class="input appearance-none mb-4"
+                    id="tipoAgendamento"
+                    th:field="*{tipo.id}"
+                >
+                    <option value="-1">
+                        Selecionar um tipo de agendamento
+                    </option>
+                    <option
+                        th:each="tipoAgendamento : ${tiposAgendamento}"
+                        th:text="${tipoAgendamento.getDescricao()}"
+                        th:value="${tipoAgendamento.ordinal()}"
+                    ></option>
+                </select>
+                <div th:replace="~{fragments :: listaErros('tipo.id')}"></div>
 
-            <label class="font-medium mt-5 text-gray-700 block" for="tipoAgendamento">Tipo de Agendamento</label>
-            <select class="form-input appearance-none bg-slate-100 text-gray-700 outline-blue-400 mb-4"
-                id="tipoAgendamento" th:field="*{tipo.id}">
-                <option value="-1">Selecionar um tipo de agendamento</option>
-                <option th:each="tipoAgendamento : ${tiposAgendamento}" th:text="${tipoAgendamento.getDescricao()}"
-                    th:value="${tipoAgendamento.ordinal()}"></option>
-            </select>
-            <div th:replace="~{fragments :: listaErros('tipo.id')}"></div>
+                <label class="label" for="dentista"> Dentista </label>
+                <select
+                    class="input appearance-none mb-4"
+                    id="dentista"
+                    th:field="*{idDentista}"
+                >
+                    <option value="-1">Selecionar um profissional</option>
+                    <option
+                        th:each="dentista : ${dentistas}"
+                        th:text="${dentista.getPessoa().getNome()}"
+                        th:value="${dentista.getId()}"
+                    ></option>
+                </select>
+                <div
+                    th:replace="~{fragments :: listaErros('idDentista')}"
+                ></div>
 
-            <label class="font-medium text-gray-700 block" for="dentista">Dentista</label>
-            <select class="form-input appearance-none bg-slate-100 text-gray-700 outline-blue-400 mb-4" id="dentista"
-                th:field="*{idDentista}">
-                <option value="-1">Selecionar um profissional</option>
-                <option th:each="dentista : ${dentistas}" th:text="${dentista.getPessoa().getNome()}"
-                    th:value="${dentista.getId()}"></option>
-            </select>
-            <div th:replace="~{fragments :: listaErros('idDentista')}"></div>
+                <label class="label" for="dataConsulta">
+                    Data da Consulta
+                </label>
+                <input
+                    class="input mb-4"
+                    id="dataConsulta"
+                    name="dataConsulta"
+                    th:field="*{dataConsulta}"
+                    type="date"
+                />
+                <div
+                    th:replace="~{fragments :: listaErros('dataConsulta')}"
+                ></div>
 
-            <label class="font-medium text-gray-700 block" for="dataConsulta">Data da Consulta</label>
-            <input class="form-input bg-slate-100 text-gray-700 outline-blue-400 mb-4" id="dataConsulta"
-                name="dataConsulta" th:field="*{dataConsulta}" type="date">
-            <div th:replace="~{fragments :: listaErros('dataConsulta')}"></div>
-
-            <label class="font-medium text-gray-700 block">Hora da Consulta</label>
-            <div class="flex justify-evenly">
-                <div>
+                <label class="label"> Hora da Consulta </label>
+                <div class="flex justify-evenly">
                     <div>
-                        <input class="checked:bg-blue-400" id="radioHora1" name="horaConsulta"
-                            th:field="*{horaConsulta}" type="radio" value="9:00">
-                        <label for="radioHora1">
-                            9:00
-                        </label>
+                        <div>
+                            <input
+                                class="checked:bg-blue-400"
+                                id="radioHora1"
+                                name="horaConsulta"
+                                th:field="*{horaConsulta}"
+                                type="radio"
+                                value="9:00"
+                            />
+                            <label class="label" for="radioHora1">9:00</label>
+                        </div>
+                        <div>
+                            <input
+                                id="radioHora2"
+                                name="horaConsulta"
+                                th:field="*{horaConsulta}"
+                                type="radio"
+                                value="10:00"
+                            />
+                            <label class="label" for="radioHora2">10:00</label>
+                        </div>
+
+                        <div>
+                            <input
+                                id="radioHora3"
+                                name="horaConsulta"
+                                th:field="*{horaConsulta}"
+                                type="radio"
+                                value="11:00"
+                            />
+                            <label class="label" for="radioHora3">11:00</label>
+                        </div>
                     </div>
                     <div>
-                        <input id="radioHora2" name="horaConsulta" th:field="*{horaConsulta}" type="radio"
-                            value="10:00">
-                        <label for="radioHora2">
-                            10:00
-                        </label>
-                    </div>
+                        <div>
+                            <input
+                                id="radioHora4"
+                                name="horaConsulta"
+                                th:field="*{horaConsulta}"
+                                type="radio"
+                                value="13:00"
+                            />
+                            <label class="label" for="radioHora4">13:00</label>
+                        </div>
 
-                    <div>
-                        <input id="radioHora3" name="horaConsulta" th:field="*{horaConsulta}" type="radio"
-                            value="11:00">
-                        <label for="radioHora3">
-                            11:00
-                        </label>
+                        <div>
+                            <input
+                                id="radioHora5"
+                                name="horaConsulta"
+                                th:field="*{horaConsulta}"
+                                type="radio"
+                                value="14:00"
+                            />
+                            <label class="label" for="radioHora5">14:00</label>
+                        </div>
+
+                        <div>
+                            <input
+                                id="radioHora6"
+                                name="horaConsulta"
+                                th:field="*{horaConsulta}"
+                                type="radio"
+                                value="15:00"
+                            />
+                            <label class="label" for="radioHora6">15:00</label>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <div>
-                        <input id="radioHora4" name="horaConsulta" th:field="*{horaConsulta}" type="radio"
-                            value="13:00">
-                        <label for="radioHora4">
-                            13:00
-                        </label>
-                    </div>
+                <div
+                    th:replace="~{fragments :: listaErros('horaConsulta')}"
+                ></div>
 
-                    <div>
-                        <input id="radioHora5" name="horaConsulta" th:field="*{horaConsulta}" type="radio"
-                            value="14:00">
-                        <label for="radioHora5">
-                            14:00
-                        </label>
-                    </div>
+                <label class="label" for="inputObservacoes">
+                    Observações
+                </label>
+                <textarea
+                    class="input mb-4 resize-none"
+                    rows="3"
+                    id="inputObservacoes"
+                    name="observacoes"
+                    th:field="*{observacoesPaciente}"
+                    type="textarea"
+                ></textarea>
 
-                    <div>
-                        <input id="radioHora6" name="horaConsulta" th:field="*{horaConsulta}" type="radio"
-                            value="15:00">
-                        <label for="radioHora6">
-                            15:00
-                        </label>
-                    </div>
+                <label class="label" for="formaPagamento">
+                    Forma de Pagamento
+                </label>
+                <select
+                    class="input appearance-none mb-4"
+                    id="formaPagamento"
+                    th:field="*{formaPagamento.id}"
+                >
+                    <option value="-1">Selecionar um tipo de Pagamento</option>
+                    <option
+                        th:each="formaPagamento : ${formasPagamento}"
+                        th:text="${formaPagamento.getDescricao()}"
+                        th:value="${formaPagamento.ordinal()}"
+                    ></option>
+                </select>
+                <div
+                    th:replace="~{fragments :: listaErros('formaPagamento.id')}"
+                ></div>
+
+                <div class="mt-3 self-end">
+                    <a
+                        class="self-center mx-1 mb-4 border border-blue-400 bg-white text-blue-400 hover:text-blue-500 hover:border-blue-500 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                        href="/"
+                    >
+                        Cancelar
+                    </a>
+                    <button
+                        class="self-center mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                        type="submit"
+                    >
+                        Cadastrar
+                    </button>
                 </div>
-            </div>
-            <div th:replace="~{fragments :: listaErros('horaConsulta')}"></div>
-
-            <label class="font-medium text-gray-700 block" for="inputObservacoes">Observações</label>
-            <textarea class="form-input bg-slate-100 text-gray-700 outline-blue-400 mb-4 resize-none" rows="3"
-                id="inputObservacoes" name="observacoes" th:field="*{observacoesPaciente}" type="textarea"></textarea>
-
-
-            <label class="font-medium text-gray-700 block" for="formaPagamento">Forma de Pagamento</label>
-            <select class="form-input appearance-none bg-slate-100 text-gray-700 outline-blue-400 mb-4"
-                id="formaPagamento" th:field="*{formaPagamento.id}">
-                <option value="-1">Selecionar um tipo de Pagamento</option>
-                <option th:each="formaPagamento : ${formasPagamento}" th:text="${formaPagamento.getDescricao()}"
-                    th:value="${formaPagamento.ordinal()}"></option>
-            </select>
-            <div th:replace="~{fragments :: listaErros('formaPagamento.id')}"></div>
-
-            <div class="mt-3 self-end">
-                <a class="self-center mb-4 border border-blue-400 bg-white text-blue-400 hover:text-blue-500 hover:border-blue-500 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                    href="/">Cancelar</a>
-                <button
-                    class="self-center mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                    type="submit">Cadastrar</button>
-            </div>
-        </form>
-    </div>
-</body>
-
+            </form>
+        </div>
+    </body>
 </html>
