--- a/src/main/resources/templates/indexAdmin.html
+++ b/src/main/resources/templates/indexAdmin.html
@@ -3,22 +3,29 @@
     <head th:replace="~{fragments :: mainHeader('Dashboard')}"></head>
 
     <body class="bg-sky-100">
-    <header th:replace="~{fragments :: header('Agendamento')}"></header>
+        <header th:replace="~{fragments :: header}"></header>
 
-        <div class="mx-20 flex flex-col items-start">
-            <a
-                href="/cadastro/dentista"
-                class="mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-            >
-                Cadastro de Dentista
-            </a>
+        <div class="flex flex-col items-center m-4">
+            <div class="w-full max-w-lg">
+                <div
+                    class="flex justify-evenly bg-white shadow-md px-6 pt-8 pb-8 rounded w-full max-w-lg gap-1"
+                >
+                    <a
+                        href="/cadastro/dentista"
+                        class="bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline self-center"
+                    >
+                        Cadastro de Dentista
+                    </a>
 
-            <a
-                href="/listagem/usuario"
-                class="mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-            >
-                Listagem de Usuários
-            </a>
+                    <a
+                        href="/listagem/usuario"
+                        class="bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline self-center"
+                    >
+                        Listagem de Usuários
+                    </a>
+                </div>
+            </div>
         </div>
+        <div class="bg-white mx-20 flex gap-8 items-start w-full"></div>
     </body>
 </html>
