--- a/src/main/resources/templates/agendamentoDentista.html
+++ b/src/main/resources/templates/agendamentoDentista.html
@@ -115,6 +115,9 @@
                         id="inputObservacoesDentista"
                         name="observacoesDentista"
                     ></textarea>
+                    <div
+                            th:replace="~{fragments :: listaErros('observacoesDentista')}"
+                    ></div>
                     <div class="mt-3 self-end">
                         <a
                             class="mb-4 mx-1 border border-blue-400 bg-white text-blue-400 hover:text-blue-500 hover:border-blue-500 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
