--- a/src/main/resources/templates/listagemUsuarios.html
+++ b/src/main/resources/templates/listagemUsuarios.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt_BR" xmlns:th="http://www.w3.org/1999/xhtml">
-    <head
-        th:replace="~{fragments :: mainHeader('Cadastro de Paciente')}"
-    ></head>
+    <head>
+        <th:block
+            th:replace="~{fragments :: mainHeader('Listagem de Usuários')}"
+        />
 
-    <body class="bg-sky-100">
+        <script
+            defer
+            src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+        ></script>
+        <script
+            defer
+            src="https://unpkg.com/htmx.org@1.9.6"
+            integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni"
+            crossorigin="anonymous"
+        ></script>
+    </head>
+
+    <body class="bg-sky-100" x-data="{ modalVisivel: false, idUsuario : 0 }">
         <header th:replace="~{fragments :: header}"></header>
         <div class="flex flex-col items-center my-4 justify-center">
             <div
@@ -16,109 +29,22 @@
                     Usuários
                 </h1>
 
-                <table
-                    class="min-w-full divide-y divide-slate-800"
-                    th:object="${usuarios}"
-                >
-                    <thead>
-                        <tr class="text-slate-500">
-                            <th class="p-2 font-normal text-left uppercase">
-                                Nome
-                            </th>
-                            <th class="p-2 font-normal text-left uppercase">
-                                CPF
-                            </th>
-                            <th class="p-2 font-normal text-left uppercase">
-                                RG
-                            </th>
-                            <th class="p-2 font-normal text-left uppercase">
-                                E-mail
-                            </th>
-                            <th class="p-2 font-normal text-left uppercase">
-                                Celular
-                            </th>
-                            <th class="p-2 font-normal text-left uppercase">
-                                Data de Nascimento
-                            </th>
-                            <th class="p-2 font-normal text-left uppercase">
-                                Gênero
-                            </th>
-                            <th class="p-2 font-normal text-left uppercase">
-                                Papel
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr
-                            class="odd:bg-white even:bg-slate-100"
-                            th:each="usuario : ${usuarios}"
-                        >
-                            <td
-                                class="p-2 text-gray-700 font-semibold"
-                                th:text="${usuario.pessoa.nome}"
-                            ></td>
-                            <td
-                                class="p-2 text-gray-700"
-                                th:text="${usuario.pessoa.cpf}"
-                            ></td>
-                            <td
-                                class="p-2 text-gray-700"
-                                th:text="${usuario.pessoa.rg}"
-                            ></td>
-                            <td
-                                class="p-2 text-gray-700"
-                                th:text="${usuario.pessoa.email}"
-                            ></td>
-                            <td
-                                class="p-2 text-gray-700"
-                                th:text="${usuario.pessoa.celular}"
-                            ></td>
-                            <td
-                                class="p-2 text-gray-700"
-                                th:text="${usuario.pessoa.dataNascimento}"
-                            ></td>
-                            <td
-                                class="p-2 text-gray-700"
-                                th:text="${usuario.pessoa.genero}"
-                            ></td>
-                            <td
-                                class="p-2 text-gray-700"
-                                th:text="${usuario.papel}"
-                            ></td>
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                        <tr class="text-slate-500">
-                            <th class="p-2 font-normal text-left uppercase">
-                                Nome
-                            </th>
-                            <th class="p-2 font-normal text-left uppercase">
-                                CPF
-                            </th>
-                            <th class="p-2 font-normal text-left uppercase">
-                                RG
-                            </th>
-                            <th class="p-2 font-normal text-left uppercase">
-                                E-mail
-                            </th>
-                            <th class="p-2 font-normal text-left uppercase">
-                                Celular
-                            </th>
-                            <th class="p-2 font-normal text-left uppercase">
-                                Data de Nascimento
-                            </th>
-                            <th class="p-2 font-normal text-left uppercase">
-                                Gênero
-                            </th>
-                            <th class="p-2 font-normal text-left uppercase">
-                                Papel
-                            </th>
-                        </tr>
-                    </tfoot>
-                </table>
+                <table th:replace="~{tabelaUsuarios :: tabela}"></table>
 
                 <a href="/" class="link"> Voltar </a>
             </div>
+        </div>
+
+        <div
+            x-show="modalVisivel"
+            class="fixed inset-0 w-full h-full flex flex-col items-center justify-center"
+        >
+            <div
+                @click="modalVisivel=false"
+                class="absolute left-0 top-0 bg-sky-50 bg-opacity-60 w-full h-full"
+            ></div>
+
+            <div id="modalContent" class="transform w-full max-w-sm"></div>
         </div>
     </body>
 </html>
